--- a/templates/pacman.html
+++ b/templates/pacman.html
@@ -2,6 +2,7 @@
 {% block title %}BATMAN - The Game{% endblock %}
 
 {% block content %}
+<h1 style="text-align:center;">Pacman</h1>
 <!-- Pacman game -->
 <div id="pacman"></div>
 {% endblock %}
