HTML comments, icons, layout edits, renamed folders

--- a/templates/pacman.html
+++ b/templates/pacman.html
@@ -1,3 +1,10 @@
+<!--
+BATMAN Pacman page
+
+Copyright (c) 2018 Jonathan Feenstra
+MIT License (https://github.com/JonathanFeenstra/BATMAN/blob/master/LICENSE)
+
+This page contains the Pacman game.-->
 {% extends 'layout.html' %}
 {% block title %}BATMAN - The Game{% endblock %}
 
